# sauer-cmake-conan

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  rpg.bat  sauerbraten.bat  sauerbraten_unix  server.bat
.github/workflows/: builds.yml
src/shared/: cube.h
src/vcpp/: CMakeLists.txt
